--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -14,6 +14,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: Readme-Workflows/recent-activity@master
+      - uses: Readme-Workflows/recent-activity@2.5.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
